[project]
name = "verba"
version = "0.1.0"
description = ""
authors = [
    {name = "SheenShaman"}
]
requires-python = ">=3.12"
dependencies = [
    "httpx[http2] (>=0.28.1,<0.29.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "ruff (>=0.15.1,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
